--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,31 +39,42 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.9"
 
-# PyTorch for matrix operations on GPU.
-torch = "*"
+# Tensor and dynamic neural net with strong GPU acceleration.
+torch = "^1.12.1"
 # Provides pretrained diffusion models.
-diffusers = "*"
+diffusers = "^0.3.0"
+# State-of-the-art Machine Learning for JAX, PyTorch & TensorFlow.
 # Provides APIs and tools to download and train pretrained models.
-transformers = "*"
-# Fixes unicode that's broken in various ways.
-ftfy = "*"
-# Command line progressbar.
+transformers = "^4.22.2"
+# Fixes mojibake and other problems with Unicode, after the fact.
+ftfy = "^6.1.1"
+# Fast, extensible progress meter.
 tqdm = "^4.64.1"
-# Image manipulation libraries.
+# Python Imaging Library.
 Pillow = "^9.2.0"
+# Wrapper package for OpenCV python bindings.
 opencv-python = "^4.6.0.66"
 
 # Dev requiremnts [optional].
 [tool.poetry.dev-dependencies]
+# Automatically format Python code to PEP 8 style guide.
 autopep8 = "*"
-covdefaults = "*"
+# A coverage plugin to provide sensible default settings.
+covdefaults = "^2.2.0"
+# The modular source checker.
 flake8 = "*"
-mypy = "*"
-pre-commit = "*"
-pydocstyle = "*"
-pytest = "*"
-pytest-cov = "*"
-tox = "*"
+# Optional static typing for Python.
+mypy = "^0.982"
+# Managing and maintaining multi-language pre-commit hooks.
+pre-commit = "^2.20.0"
+# Python style guide checker.
+pydocstyle = "^6.1.1"
+# Simple powerful testing with Python.
+pytest = "^7.1.3"
+# Python plugin for measuring coverage.
+pytest-cov = "^4.0.0"
+# Generic viirtualenv management and test cli tool.
+tox = "^3.26.0"
 
 # entry point.
 [tool.poetry.scripts]
@@ -83,12 +94,30 @@ files = "src"
 mypy_path = "src"
 namespace_packages = true
 explicit_package_bases = true
-show_error_codes = true
 strict = true
+check_untyped_defs = true
+ignore_missing_imports = true
+disallow_any_generics = true
+disallow_incomplete_defs = true
+no_implicit_optional = true
+show_error_codes = true
+show_column_numbers = true
+show_error_content = true
+warn_unused_configs = true
+warn_unused_ignores = true
+warn_redundant_cast = true
+warn_return_any = true
+warn_unreachable = true
 
 # Coverage report.
 [tool.coverage.report]
 exclude_lines = [
   "pragma: no cover",
+  "def __repr__",
   "if TYPE_CHECKING:",
+  "raise NotImplementedError",
+  "if __name__ == .__main__.",
 ]
+
+[tool.coverage.run]
+plugin = "covdefaults"
