--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,13 +99,14 @@ check_untyped_defs = true
 ignore_missing_imports = true
 disallow_any_generics = true
 disallow_incomplete_defs = true
+implicit_reexport = false
 no_implicit_optional = true
 show_error_codes = true
 show_column_numbers = true
-show_error_content = true
+# show_error_content = true
 warn_unused_configs = true
 warn_unused_ignores = true
-warn_redundant_cast = true
+# warn_redundant_cast = true
 warn_return_any = true
 warn_unreachable = true
 
