--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,20 +40,16 @@ packages = [
 python = "^3.9"
 
 # Tensor and dynamic neural net with strong GPU acceleration.
-torch = "^1.12.1"
+torch = { version = "^1.12.1", allow-prereleases = true }
 # Provides pretrained diffusion models.
 diffusers = "^0.3.0"
 # State-of-the-art Machine Learning for JAX, PyTorch & TensorFlow.
 # Provides APIs and tools to download and train pretrained models.
 transformers = "^4.22.2"
-# Fixes mojibake and other problems with Unicode, after the fact.
-ftfy = "^6.1.1"
 # Fast, extensible progress meter.
 tqdm = "^4.64.1"
 # Python Imaging Library.
 Pillow = "^9.2.0"
-# Wrapper package for OpenCV python bindings.
-opencv-python = "^4.6.0.66"
 
 # Dev requiremnts [optional].
 rope = "^1.3.0"
