--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,8 @@ Pillow = "^9.2.0"
 
 # Dev requiremnts [optional].
 rope = "^1.3.0"
+pep8 = "^1.7.1"
+pylint = "^2.15.3"
 [tool.poetry.dev-dependencies]
 # Automatically format Python code to PEP 8 style guide.
 autopep8 = "*"
