--- a/.gitignore
+++ b/.gitignore
@@ -161,6 +161,7 @@ poetry.lock
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
-.vscode
-.vim
+saved_models/
+.vscode/
+.vim/
 .DS_Store
