--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -56,3 +56,10 @@ repos:
     hooks:
       - id: mypy
         additional_dependencies: [types-all, typing_extensions]
+  - repo: https://github.com/python-poetry/poetry
+    rev: 1.2.1
+    hooks:
+      - id: poetry-check
+      # - id: poetry-lock
+      - id: poetry-export
+        args: ["-f", "requirements.txt", "-o", "requirements.txt"]
