--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,10 +51,6 @@ tqdm = "^4.64.1"
 # Python Imaging Library.
 Pillow = "^9.2.0"
 
-# Dev requiremnts [optional].
-rope = "^1.3.0"
-pep8 = "^1.7.1"
-pylint = "^2.15.3"
 [tool.poetry.dev-dependencies]
 # Automatically format Python code to PEP 8 style guide.
 autopep8 = "*"
@@ -68,6 +64,8 @@ mypy = "^0.982"
 pre-commit = "^2.20.0"
 # Python style guide checker.
 pydocstyle = "^6.1.1"
+# Python linter.
+pylint = "^2.15.3"
 # Simple powerful testing with Python.
 pytest = "^7.1.3"
 # Python plugin for measuring coverage.
