--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,11 +55,11 @@ Pillow = "^9.2.0"
 # Automatically format Python code to PEP 8 style guide.
 autopep8 = "*"
 # A coverage plugin to provide sensible default settings.
-covdefaults = "^2.2.0"
+covdefaults = { version  = "^2.2.0", optional = true }
 # The modular source checker.
 flake8 = "*"
 # Optional static typing for Python.
-mypy = "^0.982"
+mypy = { version = "^0.982", optional = true }
 # Managing and maintaining multi-language pre-commit hooks.
 pre-commit = "^2.20.0"
 # Python style guide checker.
@@ -69,9 +69,9 @@ pylint = "^2.15.3"
 # Simple powerful testing with Python.
 pytest = "^7.1.3"
 # Python plugin for measuring coverage.
-pytest-cov = "^4.0.0"
+pytest-cov = { version = "^4.0.0", optional = true }
 # Generic viirtualenv management and test cli tool.
-tox = "^3.26.0"
+tox = { version = "^3.26.0", optional = true }
 
 # entry point.
 [tool.poetry.scripts]
