--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -60,6 +60,6 @@ repos:
     rev: 1.2.1
     hooks:
       - id: poetry-check
-      # - id: poetry-lock
+      - id: poetry-lock
       - id: poetry-export
         args: ["-f", "requirements.txt", "-o", "requirements.txt"]
