--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,41 +37,43 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9"
 
 # Tensor and dynamic neural net with strong GPU acceleration.
-torch = { version = "^1.12.1", allow-prereleases = true }
+torch = { version = ">=1.12.1", allow-prereleases = true }
 # Provides pretrained diffusion models.
-diffusers = "^0.3.0"
+diffusers = ">=0.3.0"
 # State-of-the-art Machine Learning for JAX, PyTorch & TensorFlow.
 # Provides APIs and tools to download and train pretrained models.
-transformers = "^4.22.2"
+transformers = ">=4.22.2"
 # Fast, extensible progress meter.
-tqdm = "^4.64.1"
+tqdm = ">=4.64.1"
 # Python Imaging Library.
-Pillow = "^9.2.0"
+Pillow = ">=9.2.0"
+# Fundamental algorithms for scientific computing in Python
+scipy = ">=1.9.3"
 
 [tool.poetry.dev-dependencies]
 # Automatically format Python code to PEP 8 style guide.
 autopep8 = "*"
 # A coverage plugin to provide sensible default settings.
-covdefaults = { version  = "^2.2.0", optional = true }
+covdefaults = { version  = ">=2.2.0", optional = true }
 # The modular source checker.
 flake8 = "*"
 # Optional static typing for Python.
-mypy = { version = "^0.982", optional = true }
+mypy = { version = ">=0.982", optional = true }
 # Managing and maintaining multi-language pre-commit hooks.
-pre-commit = "^2.20.0"
+pre-commit = ">=2.20.0"
 # Python style guide checker.
-pydocstyle = "^6.1.1"
+pydocstyle = ">=6.1.1"
 # Python linter.
-pylint = "^2.15.3"
+pylint = ">=2.15.3"
 # Simple powerful testing with Python.
-pytest = "^7.1.3"
+pytest = ">=7.1.3"
 # Python plugin for measuring coverage.
-pytest-cov = { version = "^4.0.0", optional = true }
+pytest-cov = { version = ">=4.0.0", optional = true }
 # Generic viirtualenv management and test cli tool.
-tox = { version = "^3.26.0", optional = true }
+tox = { version = ">=3.26.0", optional = true }
 
 # entry point.
 [tool.poetry.scripts]
@@ -106,6 +108,12 @@ warn_unused_ignores = true
 # warn_redundant_cast = true
 warn_return_any = true
 warn_unreachable = true
+
+# Pyright Type Checking.
+[tool.pyright]
+reportOptionalCall = "none"
+reportGeneralTypeIssues = "none"
+reportOptionalMemberAccess = "none"
 
 # Coverage report.
 [tool.coverage.report]
